<resources>
    <string name="app_name">Inmobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="salir">Salir</string>
    <string name="contratos">Contratos</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="clave">Contraseña</string>
    <string name="telefono">Teléfono</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="editar">Editar</string>
    <string name="olvide_mi_clave">Olvidé mi contraseña</string>
    <string name="precio">Precio</string>
    <string name="tipo">Tipo</string>
    <string name="direccion">Direccion</string>
    <string name="cambiar_clave">Cambiar clave</string>
    <string name="agregar_inmueble">Agregar inmueble</string>
</resources>