<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.miguel.inmobile.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.miguel.inmobile.ui.gallery.GalleryFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_gallery_to_cambiarClaveFragment"
            app:destination="@id/cambiarClaveFragment" />
    </fragment>

    <fragment
        android:id="@+id/cambiarClaveFragment"
        android:name="com.miguel.inmobile.ui.cambiarclave.CambiarClaveFragment"
        android:label="@string/cambiar_clave"
        tools:layout="@layout/fragment_cambiar_clave">
        <action
            android:id="@+id/action_cambiarClaveFragment_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.miguel.inmobile.ui.inmuebles.InmueblesFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_inmuebles" />

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.miguel.inmobile.ui.inquilinos.InquilinosFragment"
        android:label="@string/inquilinos"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.miguel.inmobile.ui.contratos.ContratosFragment"
        android:label="@string/contratos"
        tools:layout="@layout/fragment_contratos" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.miguel.inmobile.ui.slideshow.SlideshowFragment"
        android:label="@string/salir"
        tools:layout="@layout/fragment_slideshow" />
</navigation>