<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:text="@string/mi_perfil"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/dni"
        android:inputType="number" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:enabled="false"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="lastName"
        android:enabled="false"
        android:hint="@string/apellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:enabled="false"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phoneNumber"
        android:enabled="false"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/btnCambiarClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/olvide_mi_clave"
        android:textColor="@color/teal_700"
        android:gravity="center"
        android:textAllCaps="false"
        android:padding="12dp"
        android:fontFamily="sans-serif-medium"
        android:background="@android:color/transparent" />

</LinearLayout>